Fix header z-index

--- a/components/header/index.css
+++ b/components/header/index.css
@@ -13,7 +13,7 @@
   height: var(--height);
   contain: size layout style;
   position: relative;
-  z-index: 10;
+  z-index: 1;
 }
 
 .Header--static {
